Mature Idea: semantic-aware sanitizer

--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -354,7 +354,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{AHopSan: A Fast Address Sanitizer Based on Hop-skip Checking}
+\title{AHopSan: A Semantic-aware Address Sanitizer}
 
 
 % author names and affiliations
