--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -354,8 +354,8 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{AHopSan: A Semantic-aware Address Sanitizer}
-
+\title{AHopSan: A Fast Semantic-aware Address Sanitizer \\
+  \huge {-- Be Pragmatist Not Perfectionist}}
 
 % author names and affiliations
 % use a multiple column layout for up to three different
