--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -339,6 +339,15 @@
 \newcommand{\yphn}[1]{\yphl{#1}}
 \usepackage{minted}
 
+\usepackage[margin=1.5in]{geometry}    % For margin alignment
+\usepackage[english]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\usepackage{arevmath}     % For math symbols
+\usepackage[noend]{algpseudocode}
+% \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+
 % *** Do not adjust lengths that control margins, column widths, etc. ***
 % *** Do not use packages that alter fonts (such as pslatex).         ***
 % There should be no need to do such things with IEEEtran.cls V1.6 and later.
