--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -339,14 +339,30 @@
 \newcommand{\yphn}[1]{\yphl{#1}}
 \usepackage{minted}
 
-\usepackage[margin=1.5in]{geometry}    % For margin alignment
-\usepackage[english]{babel}
-\usepackage[utf8]{inputenc}
+% \usepackage[margin=1.5in]{geometry}    % For reducing margin
+% \usepackage[english]{babel}
+% \usepackage[utf8]{inputenc}
 \usepackage{algorithm}
-\usepackage{algorithmic}
-\usepackage{arevmath}     % For math symbols
-\usepackage[noend]{algpseudocode}
+\usepackage{algorithmicx}
+%\usepackage[algo2e]{algorithm2e} 
 % \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+% \usepackage{arevmath}     % For math symbols
+% \usepackage[noend]{algpseudocode}
+\usepackage{algpseudocode}
+% \usepackage{algorithmic,algorithm2e,float}
+% \algsetup{linenosize=\tiny}
+% \usepackage{float}
+\algdef{SE}[DOWHILE]{Do}{doWhile}{\algorithmicdo}[1]{\algorithmicwhile\ #1}%
+% New definitions
+\algnewcommand\algorithmicswitch{\textbf{switch}}
+\algnewcommand\algorithmiccase{\textbf{case}}
+\algnewcommand\algorithmicassert{\texttt{assert}}
+\algnewcommand\Assert[1]{\State \algorithmicassert(#1)}%
+% New "environments"
+\algdef{SE}[SWITCH]{Switch}{EndSwitch}[1]{\algorithmicswitch\ #1\ \algorithmicdo}{\algorithmicend\ \algorithmicswitch}%
+\algdef{SE}[CASE]{Case}{EndCase}[1]{\algorithmiccase\ #1}{\algorithmicend\ \algorithmiccase}%
+\algtext*{EndSwitch}%
+\algtext*{EndCase}%
 
 % *** Do not adjust lengths that control margins, column widths, etc. ***
 % *** Do not use packages that alter fonts (such as pslatex).         ***
