--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -562,7 +562,7 @@
 
 
 % conference papers do not normally have an appendix
-
+% \input{chapters/appendix.tex}
 
 % use section* for acknowledgement
 % \section*{Acknowledgment}
@@ -604,7 +604,8 @@
 % \end{thebibliography}
 
 
-
+% conference papers do not normally have an appendix
+\input{chapters/appendix.tex}
 
 % that's all folks
 \end{document}
