Update design layout

--- a/paper/oakland/ahopsan.tex
+++ b/paper/oakland/ahopsan.tex
@@ -466,9 +466,9 @@
 % creates the second title. It will be ignored for other modes.
 %%\IEEEpeerreviewmaketitle
 
-\input{chapters/introduction.tex}
+% \input{chapters/introduction.tex}
 
-\input{chapters/backgroundrelatedworks.tex}
+% \input{chapters/backgroundrelatedworks.tex}
 
 \input{chapters/design.tex}
 
@@ -555,9 +555,9 @@
 % footnotes above bottom floats. This can be corrected via the \fnbelowfloat
 % command of the stfloats package.
 
-\input{chapters/evaluation.tex}
+% \input{chapters/evaluation.tex}
 
-\input{chapters/conclusion.tex}
+% \input{chapters/conclusion.tex}
 
 
 
